--- a/Telegram-Mac/Telegram-Sandbox.entitlements
+++ b/Telegram-Mac/Telegram-Sandbox.entitlements
@@ -8,8 +8,8 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>6N38VWS5BX.ru.keepcoder.Telegram</string>
-		<string>6N38VWS5BX.ru.keepcoder.Telegram.TelegramShare</string>
+		<string>me.handlerug.Telegram</string>
+		<string>me.handlerug.Telegram.TelegramShare</string>
 	</array>
 	<key>com.apple.security.device.audio-input</key>
 	<true/>
@@ -29,8 +29,8 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>6N38VWS5BX.ru.keepcoder.Telegram</string>
-		<string>6N38VWS5BX.ru.keepcoder.TelegramShare</string>
+		<string>$(AppIdentifierPrefix)me.handlerug.Telegram</string>
+		<string>$(AppIdentifierPrefix)me.handlerug.Telegram.TelegramShare</string>
 	</array>
 </dict>
 </plist>
