--- a/TelegramShare/TelegramShare.entitlements
+++ b/TelegramShare/TelegramShare.entitlements
@@ -6,8 +6,8 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>6N38VWS5BX.ru.keepcoder.Telegram.TelegramShare</string>
-		<string>6N38VWS5BX.ru.keepcoder.Telegram</string>
+		<string>me.handlerug.Telegram</string>
+		<string>me.handlerug.Telegram.TelegramShare</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
