--- a/Telegram-Mac/Telegram-Mac.entitlements
+++ b/Telegram-Mac/Telegram-Mac.entitlements
@@ -6,8 +6,8 @@
 	<false/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>me.handlerug.Telegram</string>
-		<string>me.handlerug.Telegram.TelegramShare</string>
+		<string>$(TeamIdentifierPrefix)me.handlerug.Telegram</string>
+		<string>$(TeamIdentifierPrefix)me.handlerug.Telegram.TelegramShare</string>
 	</array>
 	<key>com.apple.security.device.audio-input</key>
 	<true/>
